[package]
name = "cascading-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
env_logger = { version = "0.11.3", features = [
    "default",
    "color",
    "auto-color",
] }
infer = "0.15.0"
sevenz-rust = { version = "0.5.4", features = ["aes256", "aes", "bzip2"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
